slideshow fix scrollbar hideing

--- a/app/javascript/stylesheets/application/__mixins.scss
+++ b/app/javascript/stylesheets/application/__mixins.scss
@@ -424,7 +424,7 @@
   }
 }
 @mixin hide-scrollbar-x {
-  ::-webkit-scrollbar { 
+  &::-webkit-scrollbar { 
     display: none;  /* Chrome Safari */
   }
   scrollbar-width: none; /* Firefox */
